--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Schools and Training"
+title: "Schools, Wokshopsand Training"
 permalink: /teaching/
 author_profile: true
 ---
